@@ -119,8 +119,10 @@ static NPIdentifier fullscreen_id;
 static NPIdentifier showlogo_id;
 static NPIdentifier playState_id;
 static NPIdentifier controls_id;
+static NPIdentifier settings_id;
 
 static NPIdentifier controls_currentPosition_id;
+static NPIdentifier settings_volume_id;
 //////////////////////////////////////
 //
 // general initialization and shutdown
@@ -308,8 +310,10 @@ tv_driver(NULL), tv_device(NULL), tv_input(NULL), tv_width(0), tv_height(0)
     showlogo_id = NPN_GetStringIdentifier("showlogo");
     playState_id = NPN_GetStringIdentifier("playState");
     controls_id = NPN_GetStringIdentifier("controls");
+    settings_id = NPN_GetStringIdentifier("settings");
 
     controls_currentPosition_id = NPN_GetStringIdentifier("currentPosition");
+    settings_volume_id = NPN_GetStringIdentifier("volume");
 
     // generate a random controlid
     rand = g_rand_new();
@@ -1623,7 +1627,8 @@ class ScriptablePluginObjectBase:public NPObject {
   public:
     ScriptablePluginObjectBase(NPP npp)
     :mNpp(npp) {
-    } virtual ~ ScriptablePluginObjectBase() {
+    }
+    virtual ~ ScriptablePluginObjectBase() {
     }
 
     // Virtual NPObject hooks called through this base class. Override
@@ -1783,7 +1788,8 @@ class ScriptablePluginObjectControls:public ScriptablePluginObjectBase {
   public:
     ScriptablePluginObjectControls(NPP npp)
     :ScriptablePluginObjectBase(npp) {
-    } virtual bool HasMethod(NPIdentifier name);
+    }
+    virtual bool HasMethod(NPIdentifier name);
     virtual bool Invoke(NPIdentifier name, const NPVariant * args,
                         uint32_t argCount, NPVariant * result);
     virtual bool InvokeDefault(const NPVariant * args, uint32_t argCount, NPVariant * result);
@@ -1897,12 +1903,108 @@ bool ScriptablePluginObjectControls::SetProperty(NPIdentifier name, const NPVari
     return false;
 }
 
+class ScriptablePluginObjectSettings:public ScriptablePluginObjectBase {
+  public:
+    ScriptablePluginObjectSettings(NPP npp)
+    :ScriptablePluginObjectBase(npp) {
+    }
+    virtual bool HasMethod(NPIdentifier name);
+    virtual bool Invoke(NPIdentifier name, const NPVariant * args,
+                        uint32_t argCount, NPVariant * result);
+    virtual bool InvokeDefault(const NPVariant * args, uint32_t argCount, NPVariant * result);
+    virtual bool HasProperty(NPIdentifier name);
+    virtual bool GetProperty(NPIdentifier name, NPVariant * result);
+    virtual bool SetProperty(NPIdentifier name, const NPVariant * value);
+
+};
+
+static NPObject *AllocateScriptablePluginObjectSettings(NPP npp, NPClass * aClass)
+{
+    return new ScriptablePluginObjectSettings(npp);
+}
+
+DECLARE_NPOBJECT_CLASS_WITH_BASE(ScriptablePluginObjectSettings,
+                                 AllocateScriptablePluginObjectSettings);
+
+bool ScriptablePluginObjectSettings::HasMethod(NPIdentifier name)
+{
+    return false;
+}
+
+bool ScriptablePluginObjectSettings::Invoke(NPIdentifier name, const NPVariant * args,
+                                            uint32_t argCount, NPVariant * result)
+{
+    CPlugin *pPlugin = (CPlugin *) mNpp->pdata;
+    if (pPlugin == NULL) {
+        printf("Can't find plugin pointer\n");
+        return PR_FALSE;
+    }
+
+    return false;
+}
+
+bool ScriptablePluginObjectSettings::InvokeDefault(const NPVariant * args, uint32_t argCount,
+                                                   NPVariant * result)
+{
+    printf("ScriptablePluginObject default method called!\n");
+
+    STRINGZ_TO_NPVARIANT(strdup("default method return val"), *result);
+
+    return PR_TRUE;
+}
+
+bool ScriptablePluginObjectSettings::HasProperty(NPIdentifier name)
+{
+    if (name == settings_volume_id) {
+        return true;
+    } else {
+        return false;
+    }
+}
+
+bool ScriptablePluginObjectSettings::GetProperty(NPIdentifier name, NPVariant * result)
+{
+    double d;
+
+    CPlugin *pPlugin = (CPlugin *) mNpp->pdata;
+    if (pPlugin == NULL) {
+        printf("Can't find plugin pointer\n");
+        VOID_TO_NPVARIANT(*result);
+        return false;
+    }
+
+    if (name == settings_volume_id) {
+        pPlugin->GetVolume(&d);
+        DOUBLE_TO_NPVARIANT(d, *result);
+        return true;
+    }
+
+    VOID_TO_NPVARIANT(*result);
+    return false;
+}
+
+bool ScriptablePluginObjectSettings::SetProperty(NPIdentifier name, const NPVariant * value)
+{
+    CPlugin *pPlugin = (CPlugin *) mNpp->pdata;
+    if (pPlugin == NULL) {
+        printf("Can't find plugin pointer\n");
+        return false;
+    }
+
+    if (name == settings_volume_id) {
+        pPlugin->SetVolume(NPVARIANT_TO_DOUBLE(*value));
+        return true;
+    }
+
+    return false;
+}
 
 class ScriptablePluginObject:public ScriptablePluginObjectBase {
   public:
     ScriptablePluginObject(NPP npp)
     :ScriptablePluginObjectBase(npp) {
-    } virtual bool HasMethod(NPIdentifier name);
+    }
+    virtual bool HasMethod(NPIdentifier name);
     virtual bool Invoke(NPIdentifier name, const NPVariant * args,
                         uint32_t argCount, NPVariant * result);
     virtual bool InvokeDefault(const NPVariant * args, uint32_t argCount, NPVariant * result);
@@ -2189,7 +2291,7 @@ bool ScriptablePluginObject::HasProperty(NPIdentifier name)
         name == src_id ||
         name == ShowControls_id ||
         name == fullscreen_id ||
-        name == showlogo_id || name == playState_id || name == controls_id) {
+        name == showlogo_id || name == playState_id || name == controls_id || name == settings_id) {
         return true;
     } else {
         return false;
@@ -2242,6 +2344,11 @@ bool ScriptablePluginObject::GetProperty(NPIdentifier name, NPVariant * result)
 
     if (name == controls_id) {
         OBJECT_TO_NPVARIANT(pPlugin->GetScriptableObjectControls(), *result);
+        return true;
+    }
+
+    if (name == settings_id) {
+        OBJECT_TO_NPVARIANT(pPlugin->GetScriptableObjectSettings(), *result);
         return true;
     }
 
@@ -2314,4 +2421,18 @@ NPObject *CPlugin::GetScriptableObjectControls()
     }
 
     return m_pScriptableObjectControls;
+}
+
+NPObject *CPlugin::GetScriptableObjectSettings()
+{
+    if (!m_pScriptableObjectSettings) {
+        m_pScriptableObjectSettings =
+            NPN_CreateObject(mInstance, GET_NPOBJECT_CLASS(ScriptablePluginObjectSettings));
+    }
+
+    if (m_pScriptableObjectSettings) {
+        NPN_RetainObject(m_pScriptableObjectSettings);
+    }
+
+    return m_pScriptableObjectSettings;
 }
