@@ -1,4 +1,5 @@
 Development
+	Add .settings.volume to WMP Javascript emulation
 	Tag as 1.0.4b1
 	When getting a file from Apple, only play the first media link
 	Add udp as supported streaming format
